manifests/parkleit-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parkleit-api
  namespace: default
  labels:
    app: parkleit-api
spec:
  ports:
    - port: 5000
      protocol: TCP
      name: api
  selector:
    app: parkleit-api
