manifests/parkleit-api/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: parkleit-api
  namespace: default
  labels:
    app: parkleit-api
    component: ingress
  annotations:
    # ingress.kubernetes.io/auth-secret: parkleit-api-basic-auth
    # ingress.kubernetes.io/auth-type: basic
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: parkleit-api.codeformuenster.org
    http:
      paths:
      - backend:
          serviceName: parkleit-api
          servicePort: 5000
        path: /
  tls:
  - hosts:
    - parkleit-api.codeformuenster.org
    secretName: parkleit-api-tls
